Fix :hover issues on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -635,7 +635,7 @@ button {
 }
 
 /* ~~~~~ Pseudo Classes ~~~~~ */
-a:hover:not(.project-info__arrow) {
+.link:hover:not(.project-info__arrow) {
   opacity: 0.7;
 }
 
